; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_deflate.c_DeflateResetInput.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_deflate.c_DeflateResetInput.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.deflate_state = type { i32, i64, i64 }

@LogCCP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"Deflate: Input channel reset\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @DeflateResetInput to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @DeflateResetInput(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.deflate_state*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.deflate_state*
  store %struct.deflate_state* %5, %struct.deflate_state** %3, align 8
  %6 = load %struct.deflate_state*, %struct.deflate_state** %3, align 8
  %7 = getelementptr inbounds %struct.deflate_state, %struct.deflate_state* %6, i32 0, i32 2
  store i64 0, i64* %7, align 8
  %8 = load %struct.deflate_state*, %struct.deflate_state** %3, align 8
  %9 = getelementptr inbounds %struct.deflate_state, %struct.deflate_state* %8, i32 0, i32 1
  store i64 0, i64* %9, align 8
  %10 = load %struct.deflate_state*, %struct.deflate_state** %3, align 8
  %11 = getelementptr inbounds %struct.deflate_state, %struct.deflate_state* %10, i32 0, i32 0
  %12 = call i32 @inflateReset(i32* %11)
  %13 = load i32, i32* @LogCCP, align 4
  %14 = call i32 @log_Printf(i32 %13, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @inflateReset(i32*) #1

declare dso_local i32 @log_Printf(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
